--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,11 +1,62 @@
-<header class="header">
-  <div class="header__container">
-    <a href="#" class="header__logo logo"></a>
-    <nav class="header__menu menu">
-      <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-      </ul>
-    </nav>
-    <!-- @@include('./iconMenu.html', {}) -->
+<header class="b-header">
+  <div class="b-container">
+    <div class="b-header__top">
+        <div class="b-city">
+            <select class="b-city__select" name="city">
+            <option class="b-city__item">Санкт-Петербург</option>
+            <option class="b-city__item">Москва</option>
+          </select>
+        </div>
+          <nav class="b-menu">
+            <a class="b-menu__item" href="javascript:void(0)" title="Доставка и оплата">Доставка и оплата</a>
+            <a class="b-menu__item" href="javascript:void(0)" title="Гарантия и возврат">Гарантия и возврат</a>
+          </nav>
+          <div class="b-header__wrapper">
+              <a class="b-header__phone" title="8 495 730 53 00" href="tel:84957305300">8 495 730 53 00
+                  <span class="b-header__phone-text">Круглосуточно</span>
+              </a>
+              <div class="b-login">
+                  <div class="b-login__image">
+                    <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.28683 8.84242C10.5657 8.84242 12.4114 6.82722 12.4114 4.36C12.4114 1.93045 10.5657 0 8.28683 0C6.01737 0 4.15283 1.95871 4.16225 4.37884C4.17167 6.83663 6.00795 8.84242 8.28683 8.84242ZM8.28683 7.19448C6.9873 7.19448 5.88553 5.96087 5.88553 4.37884C5.87612 2.83447 6.97789 1.64795 8.28683 1.64795C9.60519 1.64795 10.6881 2.81564 10.6881 4.36C10.6881 5.94203 9.59577 7.19448 8.28683 7.19448ZM2.41071 17.6001H14.1535C15.7826 17.6001 16.5642 17.0822 16.5642 15.971C16.5642 13.3813 13.3343 9.93478 8.28683 9.93478C3.2394 9.93478 0 13.3813 0 15.971C0 17.0822 0.781599 17.6001 2.41071 17.6001ZM2.11879 15.9521C1.89279 15.9521 1.80804 15.8768 1.80804 15.7073C1.80804 14.2665 4.134 11.5827 8.28683 11.5827C12.4302 11.5827 14.7562 14.2665 14.7562 15.7073C14.7562 15.8768 14.6715 15.9521 14.4455 15.9521H2.11879Z" fill="#8168F0"/>
+                    </svg>
+                  </div>
+                  <span class="b-login__name">Богдан</span>
+              </div>
+          </div>
+    </div>
+    <div class="b-header__bottom">
+        <a class="b-logo" href="javascript:void(0)" title="localpfarm">
+            <img class="b-logo__image" alt="localpfarm" src="/images/logo.png"/>
+        </a>
+        <a class="b-button" href="javascript:void(0)" title="Каталог">Каталог</a>
+        <form class="b-search-form" name="search">
+            <div class="b-input">
+                <input class="b-input__field" type="search" placeholder="Название или категория товара"/>
+            </div>
+            <button class="b-search-form__button">
+                <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_2_455)">
+                    <path d="M22.0413 23.0001C21.796 23.0001 21.5506 22.9062 21.3637 22.7193L14.6746 16.0302C14.2999 15.6554 14.2999 15.0498 14.6746 14.6751C15.0493 14.3004 15.655 14.3004 16.0297 14.6751L22.7188 21.3642C23.0935 21.7389 23.0935 22.3446 22.7188 22.7193C22.532 22.9062 22.2866 23.0001 22.0413 23.0001Z" fill="white"/>
+                    <path d="M9.34375 18.6875C4.19175 18.6875 0 14.4957 0 9.34375C0 4.19175 4.19175 0 9.34375 0C14.4957 0 18.6875 4.19175 18.6875 9.34375C18.6875 14.4957 14.4957 18.6875 9.34375 18.6875ZM9.34375 1.91667C5.24879 1.91667 1.91667 5.24879 1.91667 9.34375C1.91667 13.4387 5.24879 16.7708 9.34375 16.7708C13.4387 16.7708 16.7708 13.4387 16.7708 9.34375C16.7708 5.24879 13.4387 1.91667 9.34375 1.91667Z" fill="white"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_2_455">
+                    <rect width="23" height="23" fill="white"/>
+                    </clipPath>
+                    </defs>
+                </svg>
+            </button>
+        </form>
+        <div class="b-cart">
+          <div class="b-cart__image">
+            <svg width="29" height="33" viewBox="0 0 29 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M28.8121 31.9153L26.304 8.03069C26.2514 7.53068 25.8299 7.15101 25.3271 7.15101H20.613V6.07621C20.613 2.72591 17.8871 0 14.5368 0C11.1862 0 8.46032 2.72591 8.46032 6.07621V7.15101H3.74619C3.2434 7.15101 2.82194 7.53068 2.76932 8.03069L0.261192 31.9153C0.232238 32.192 0.32212 32.4682 0.508178 32.6752C0.694487 32.8819 0.959852 32.9999 1.23806 32.9999H27.835C28.1134 32.9999 28.3788 32.8819 28.5649 32.6752C28.7514 32.4682 28.8411 32.192 28.8121 31.9153ZM10.4246 6.07621C10.4246 3.80902 12.2693 1.96431 14.5368 1.96431C16.804 1.96431 18.6487 3.80902 18.6487 6.07621V7.15101H10.4246V6.07621ZM2.32872 31.0356L4.63065 9.11532H8.46032V11.2798C8.46032 11.8221 8.90016 12.2619 9.44247 12.2619C9.98478 12.2619 10.4246 11.8221 10.4246 11.2798V9.11532H18.6487V11.2798C18.6487 11.8221 19.0885 12.2619 19.6308 12.2619C20.1731 12.2619 20.613 11.8221 20.613 11.2798V9.11532H24.4426L26.7446 31.0356H2.32872Z" fill="#8168F0"/>
+            </svg>
+          </div>
+          <span class="b-cart__text">Корзина</span>
+          <span class="b-count">1</span>
+        </div>
+    </div>
   </div>
 </header>
